--- a/codechef_management_app/templates/events.html
+++ b/codechef_management_app/templates/events.html
@@ -1,115 +1,97 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
-  <head>
-    <link
-      href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      rel="stylesheet"
-      id="bootstrap-css"
-    />
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-    <title>Events</title>
-    <style>
-      th,
-      td {
-        border: 2px black solid;
-      }
-
-      .center {
-        margin-left: auto;
-        margin-right: auto;
-      }
-    </style>
-  </head>
-
-  <body>
-    <br />
-    <center><h2>Welcome to Events</h2></center>
-    <div>
-      {% if user.is_authenticated %}
-      <h2>Hello, {{user.first_name}}</h2>
-      <button><a class="example" href="{% url 'logout' %}">Logout</a></button>
-      {% else %}
-
-      <center>
+<head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static "plugin/events.css" %}">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <title>Events</title>
+</head>
+<body>
+    <div class="container">
+      <a href="./demo.html" style="text-decoration: none;">
+        <h1 class="name">CodeChef DYPIU Chapter</h1>
+      </a>
+        <h2 class="upevts">Upcoming Events</h2>
         <div>
-          <button>
-            <a class="example" href="codechef_management_app/register">
-              Register
-            </a>
-          </button>
+          {% if user.is_authenticated %}
+            <h2 class="hellouser">Hello, {{user.first_name}}!</h2>
+            <a class="usrlog" href="{% url 'logout' %}">Logout</a>
+          {% else %}
+            <a class="reg" href="./register">Register</a>
+            <a class="log" href="./login">Login</a>
+          {% endif %}
         </div>
+        
+        {% if user.is_superuser %}
+            <div>
+              <button>
+                <a href="event_form"> Add Events </a>
+              </button>
+            </div>
+            <div>
+            
+              <button>
+                <a href="executive_register"> Add Executives </a>
+              </button>
+            </div>
+        {% endif %}
 
-        <button>
-          <a class="example" href="codechef_management_app/login"> Login </a>
-        </button>
-      </center>
-      {% endif %}
+        {% if user.is_staff %}
+            <div>
+              <button>
+                <a href="event_form"> Add Events </a>
+              </button>
+            </div>
+        
+            <div>
+              <button>
+                <a class="example" href="event_del"> Delete Event </a>
+              </button>
+            </div>
+        
+            <div>
+              <button>
+                <a class="example" href="executive_del"> Delete Executives </a>
+              </button>
+            </div>
+        
+            <div>
+              <button>
+                <a class="example" href="executive_del"> Delete Participates </a>
+              </button>
+            </div>
+        {% endif %}
+        
+        <table class="eventtable">
+          <tr style="padding: 10px;">
+            <th style="padding: 35px; font-family: Roboto, sans-serif; font-size: 18px; font-weight: 100;">Event Title</th>
+            <th style="padding: 35px; font-family: Roboto, sans-serif; font-size: 18px; font-weight: 100;">Event Description</th>
+            <th style="padding: 35px; font-family: Roboto, sans-serif; font-size: 18px; font-weight: 100;">Start Date</th>
+            <th style="padding: 35px; font-family: Roboto, sans-serif; font-size: 18px; font-weight: 100;">End Date</th>
+          </tr>
+          {% if eve %} 
+            {% for e in eve %}
+                <tr style="padding: 10px;">
+                  <td style="padding: 10px; font-family: Roboto, sans-serif; font-size: 16px;">{{ e.title }}</td>
+                  <td style="padding: 10px; font-family: Roboto, sans-serif; font-size: 16px;">{{ e.description}}</td>
+                  <td style="padding: 10px; font-family: Roboto, sans-serif; font-size: 16px;">{{ e.start_date}}</td>
+                  <td style="padding: 10px; font-family: Roboto, sans-serif; font-size: 16px;">{{ e.end_date}}</td>
+                </tr>
+            {% endfor %} 
+          {% endif %}
+        </table>
+
+        <div class="footer" style="margin-top: 250px;">
+          <center style="line-height: 8px;">
+            <p style="font-family: 'Roboto', sans-serif; font-size: 14px; color: black;">Proudly made my Rajni Dhruv & Chandan
+            </p>
+            <p style="font-family: 'Roboto', sans-serif; font-size: 14px; color: black;">©CodeChef DYPIU 2021</p>
+            <p style="font-family: 'Roboto', sans-serif; font-size: 14px; color: black;">All rights reserved</p>
+          </center>
+        </div>
     </div>
-
-    <br />
-    {% if user.is_superuser %}
-
-    <div>
-      <button>
-        <a href="event_form"> Add Events </a>
-      </button>
-    </div>
-    <div>
-
-      <button>
-        <a href="executive_register"> Add Executives </a>
-      </button>
-    </div>
-    {% endif %} {% if user.is_staff %}
-
-    <div>
-      <button>
-        <a href="event_form"> Add Events </a>
-      </button>
-    </div><br>
-
-    <div>
-      <button>
-        <a class="example" href="event_del"> Delete Event </a>
-      </button>
-    </div><br><br>
-
-    <div>
-      <button>
-        <a class="example" href="executive_del"> Delete Executives </a>
-      </button>
-    </div>
-
-    <div>
-      <button>
-        <a class="example" href="executive_del"> Delete Participates </a>
-      </button>
-    </div>
-
-
-    {% endif %}
-
-    <table class="center">
-      <tr>
-        <th>Event Title</th>
-        <th>Event Description</th>
-        <th>Start Date</th>
-        <th>End Date</th>
-      </tr>
-      {% if eve %} {% for e in eve %}
-
-      <tr>
-        <td>{{ e.title }}</td>
-
-        <td>{{ e.description}}</td>
-
-        <td>{{ e.start_date}}</td>
-
-        <td>{{ e.end_date}}</td>
-      </tr>
-      {% endfor %} {% endif %}
-    </table>
-  </body>
+</body>
 </html>
