--- a/codechef_management_app/templates/executive_del.html
+++ b/codechef_management_app/templates/executive_del.html
@@ -1,41 +1,41 @@
-
+{% load static %}
 <!DOCTYPE html>
 <html>
-  <head>
-    <link
-      href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      rel="stylesheet"
-      id="bootstrap-css"
-    />
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="{% static "plugin/executive.css" %}">
+  <title>Event Form</title>
+</head>
+<body>
+      <div class="container">
+        <a href="./demo.html" style="text-decoration: none;">
+          <h1 class="name">CodeChef DYPIU Chapter</h1>
+        </a>
+        <h1 class="head">Delete members from Executive Team</h1>
+        <form action="executive_del" method="post">
+          {% csrf_token %}
+          <input class="inputbox" type="text" name="username" placeholder="User Name" required/>
+          <input class="submitbtn" type="Submit" value="Delete"/>
+        </form>
 
-    <title>Event Form</title>
-  </head>
+        <div>
+          {% for message in messages %}
+          <h3>{{message}}</h3>
+          {% endfor %}
+        </div>
 
+        <div class="footer" style="margin-top: 250px;">
+          <center style="line-height: 8px;">
+            <p style="font-family: 'Roboto', sans-serif; font-size: 14px; color: black;">Proudly made my Rajni Dhruv & Chandan
+            </p>
+            <p style="font-family: 'Roboto', sans-serif; font-size: 14px; color: black;">©CodeChef DYPIU 2021</p>
+            <p style="font-family: 'Roboto', sans-serif; font-size: 14px; color: black;">All rights reserved</p>
+          </center>
+        </div>
+      </div>
 
-
-  <body>
-      <div class="container" >
-    <form action="executive_del" method="post">
-      {% csrf_token %}
-<br>
-      <input
-        type="text"
-        name="username"
-        placeholder="User Name"
-        required
-      /><br />
-      <input type="Submit" value="Delete" />
-    </form>
-
-     <br />
-</div>
-    <div>
-      {% for message in messages %}
-      <h3> {{message}} </h3>
-      {% endfor %}
-    </div>
-    </div>
-  </body>
+</body>
 </html>
