--- a/codechef_management_app/templates/demo.html
+++ b/codechef_management_app/templates/demo.html
@@ -1,58 +1,152 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html>
   <head>
-
-
     <!--CHANDAN -->
-
-        <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CodeChef DYPIU Chapter</title>
     <link rel="stylesheet" href="{% static "plugin/styles_home.css" %}">
-
     <!-- for login form-->
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <!-- for tagline animation -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script> 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-  </head>
-
-  <body>
-        
-                
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous" />
+    
+</head>
+<body>
+  <div id="particles-js"></div>
     <div class="container">
+      <div class="fronttext">
+          <h1 class="name">CodeChef DYPIU Chapter</h1>
+          <h3 class="ml3">Powered by Data Structures and Algorithms</h3>
+      </div>
+      
+      {% if user.is_authenticated %}  
+        <h2>Hello, {{user.first_name}}</h2>       
+        <button><a class="example" href = "{% url 'logout' %}">Logout</a></button>  
 
-        <div class="fronttext">
-            <h1 class="name">CodeChef DYPIU Chapter</h1>
-            <h3 class="ml3">Powered by Data Structures and Algorithms</h3>
+      {% else %}
+      <div class="flip">
+          <a href="codechef_management_app/register">
+            <div class="front">Register</div>
+            <div class="back">Register</div>
+          </a>
+      </div>   
+      
+      <div class="flip_login">
+        <a href="codechef_management_app/login">
+          <div class="front_login">Login</div>
+          <div class="back_login">Login</div>
+        </a>
+      </div> 
+        
+      {% endif %}
+      <div class="fillercontent">
+        <h1 class="heading1">About the Chapter</h1>
+        <p class="textarea1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+
+      <h1 style="font-family: 'Roboto', sans-serif; font-size: 40px; color: #1a74e2; font-weight: 300; margin-top: 100px;">Chapter Departments</h1>
+      <div class="flex-container">
+        <div class="card" style="--cards: 5">
+          <div class="child">
+            <h2 style="font-family: 'Roboto', sans-serif; font-size: 30px; color: #1a74e2; font-weight: 100;">Competitive Programming Team</h2>
+            <p style="font-family: 'Roboto', sans-serif; font-size: 15px; text-align: justify;">Heart of the chapter, the CP Team is responsible for conducting and planning sessions, preparing questions for contests, writing the editorials and clearing the doubts.</p>
+          </div>
+          <div class="child"></div>
+          <div class="child"></div>
+          <div class="child"></div>
+          <div class="child"></div>
         </div>
         
-                   {% if user.is_authenticated %}  
-                        <h2>Hello, {{user.first_name}}</h2>       
-                      <button><a class="example" href = "{% url 'logout' %}">Logout</a>        </button>     
-                    {% else %}      
-       
-                         <center><button><a class="example" href = "codechef_management_app/register"> Register </a> </button> &nbsp;&nbsp;&nbsp;&nbsp;
-                        <button><a class="example" href = "codechef_management_app/login"> Login </a></button>
-</center>
-                    {% endif %}
-
-        
-        <div class="footer" style="margin: 20px;">
-            <center>
-                <p style="font-family: 'Roboto', sans-serif; font-size: 13px; color: #797979;">©CodeChef DYPIU 2021</p>
-                <p style="font-family: 'Roboto', sans-serif; font-size: 13px; color: #797979;">All rights reserved</p>
-            </center>
-            
+        <div class="card" style="--cards: 5">
+          <div class="child">
+            <h2 style="font-family: 'Roboto', sans-serif; font-size: 30px; color: #1a74e2; font-weight: 100;">Outreach and Media Team</h2>
+            <p style="font-family: 'Roboto', sans-serif; font-size: 15px; text-align: justify;">Creating an awarness about the
+              chapter and coding in the college, promoting the sessions, contests held by the chapter.Handling the social media
+              platforms of the chapter, designing posters of events.</p>
+          </div>
+          
+          <div class="child"></div>
+          <div class="child"></div>
+          <div class="child"></div>
+          <div class="child"></div>
         </div>
+        
+        <div class="card" style="--cards: 5">
+          <div class="child">
+            <h2 style="font-family: 'Roboto', sans-serif; font-size: 30px; color: #1a74e2; font-weight: 100;">Events Team</h2>
+            <p style="font-family: 'Roboto', sans-serif; font-size: 15px; text-align: justify;">Executing the plan, hosting the contests on codechef.com for the chapter, assisting with the work, maintaining the communication platform.</p>
+          </div>
+          <div class="child"></div>
+          <div class="child"></div>
+          <div class="child"></div>
+          <div class="child"></div>
+        </div>
+      </div>
 
+      <div>
+        <h1 style="font-family: 'Roboto', sans-serif; font-size: 40px; color: #1a74e2; font-weight: 300; margin-top: 100px;">Chapter Leads</h1>
+        <div class="flex-container-2">
+          <div class="pres" style="padding: 50px; margin-top: 50px; margin-left: 100px;">
+            <h2 style="font-family: 'Roboto', sans-serif; font-size: 25px; color: #000;">Aakriti Singh</h2>
+            <p style="font-family: 'Roboto', sans-serif; font-size: 17px; color: #000;">President, CodeChef DYPIU</p>
+          </div>
+          
+          <div class="cp" style="padding: 50px; margin-top: 50px; margin-left: 100px;">
+            <h2 style="font-family: 'Roboto', sans-serif; font-size: 25px; color: #000;">Chandan Dhamande</h2>
+            <p style="font-family: 'Roboto', sans-serif; font-size: 17px; color: #000;">Competitive Programming Lead, CodeChef
+              DYPIU</p>
+          </div>
+          
+          <div class="oam" style="padding: 50px; margin-top: 50px; margin-left: 100px;">
+            <h2 style="font-family: 'Roboto', sans-serif; font-size: 25px; color: #000;">Jyoti Dingley</h2>
+            <p style="font-family: 'Roboto', sans-serif; font-size: 17px; color: #000;">Outreach and Media Lead, CodeChef DYPIU
+            </p>
+          </div>
+          
+          <div class="eves" style="padding: 50px; margin-top: 50px; margin-left: -10px;">
+            <h2 style="font-family: 'Roboto', sans-serif; font-size: 25px; color: #000;">Harsh Shah</h2>
+            <p style="font-family: 'Roboto', sans-serif; font-size: 17px; color: #000;">Events Lead, CodeChef DYPIU</p>
+          </div>
+        </div>
+      </div>
+      
+      <div class="socialmedia">
+        <h1 style="font-family: 'Roboto', sans-serif; font-size: 40px; color: #1a74e2; font-weight: 300; margin-top: 100px;">
+          Follow us on Social Media</h1>
+        <ul style="margin-top: 170px;">
+          <li><a href="https://discord.com/invite/rKauNmVCpW"><i class="fab fa-discord" aria-hidden="true"></i></a></li>
+          
+          <li><a href="https://www.snapchat.com/add/codechefdypiu"><i class="fab fa-snapchat" aria-hidden="true"></i></a></li>
+          <li><a href="https://in.linkedin.com/company/codechef-dypiu-chapter"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
+          <li><a href="https://www.instagram.com/codechefdypiu/?igshid=6n8t19werqjw"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+        </ul>
+      </div>
+      
+
+      <div class="footer" style="margin-top: 250px;">
+        <center style="line-height: 8px;">
+            <p  style="font-family: 'Roboto', sans-serif; font-size: 14px; color: black;">Proudly made my Rajni Dhruv & Chandan</p>
+            <p style="font-family: 'Roboto', sans-serif; font-size: 14px; color: black;">©CodeChef DYPIU 2021</p>
+            <p style="font-family: 'Roboto', sans-serif; font-size: 14px; color: black;">All rights reserved</p>
+        </center>
+      </div>
     </div>
+    
     <script src="{% static "/plugin/animate.js" %}"></script>
+    <script src="{% static "/plugin/particles.js" %}"></script>
+    <script src="{% static "/plugin/particle.js" %}"></script>
 </body>
 </html>
