--- a/codechef_management_app/templates/register.html
+++ b/codechef_management_app/templates/register.html
@@ -1,78 +1,50 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
-  <head>
-    <link
-      href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      rel="stylesheet"
-      id="bootstrap-css"
-    />
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <!-- this link is for fonts-->
+  <link rel="stylesheet" href="{% static "plugin/register.css" %}">
+  <title>User Registration</title>
+</head>
+<body>
+  <div class="container">
+    <a href="./demo.html" style="text-decoration: none;">
+      <h1 class="name">CodeChef DYPIU Chapter</h1>
+    </a>
+    <h1 class="registeryrslf">Register Yourself at CodeChef DYPIU Chapter!</h1>
+    <div class="registrationform">
+      <form action="register" method="post" class="regform">
+        {% csrf_token %}
+        <input class="inputbox" type="text" name="first_name" / placeholder="First name" required>
+        <input class="inputbox" type="text" name="last_name" placeholder="Last name" required />
+        <input class="inputbox" type="email" name="email" placeholder="Email" required />
+        <input class="inputbox" type="text" name="codechef_id" placeholder="CodeChef ID" required />
+        <input class="inputbox" type="text" name="username" placeholder="Username" required />
+        <input class="inputbox" type="text" name="prn" placeholder="PRN" required />
+        <input class="inputbox" type="password" name="password1" placeholder="Password" required />
+        <input class="inputbox" type="password" name="password2" placeholder="Confirm Password" required />
+        <input class="submitbtn" type="Submit" value="Register"/>
+      </form>
+    </div>
 
-    <title>Registration</title>
-  </head>
-
-  <body>
-    <form action="register" method="post">
-      {% csrf_token %}
-
-  <body>
-      <div class="container" >
-
-    <form action="register" method="post">
-      {% csrf_token %}
-<br>
-      <input
-        type="text"
-        name="first_name"
-        placeholder="First Name"
-        required
-      /><br /><br>
-      <br /><br>
-      <input
-        type="text"
-        name="last_name"
-        placeholder="Last Name"
-        required
-      /><br />
-      <input type="email" name="email" placeholder="Email" required /><br />
-    <br /><br>
-      <input
-        type="text"
-        name="codechef_id"
-        placeholder="Codechef_id"
-        required
-      />
-
-      <br /><br>
-
-<input type="text" name="username" placeholder="username" required/> <br><br>
-
-      <input type ="text" name="prn" placeholder="Prn_no" required /><br /><br>
-      <input
-        type="password"
-        name="password1"
-        placeholder="Password"
-        required
-      /><br />
-     <br /><br>
-      <input
-        type="password"
-        name="password2"
-        placeholder="Confirm Password"
-        required
-      /><br />
-      <input type="Submit" value="Register" />
-    </form>
-
-     <br /><br>
-    </form>
-</div>
     <div>
-      {% for message in messages %}
+      {% for message in messages %} 
       <h3> {{message}} </h3>
       {% endfor %}
     </div>
+    <div class="footer" style="margin-top: 250px;">
+      <center style="line-height: 8px;">
+        <p style="font-family: 'Roboto', sans-serif; font-size: 14px; color: black;">Proudly made my Rajni Dhruv & Chandan
+        </p>
+        <p style="font-family: 'Roboto', sans-serif; font-size: 14px; color: black;">©CodeChef DYPIU 2021</p>
+        <p style="font-family: 'Roboto', sans-serif; font-size: 14px; color: black;">All rights reserved</p>
+      </center>
     </div>
-  </body>
+  </div>
+  
+</body>
+
 </html>
